deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pad
  namespace: pad
  labels:
    app: pad
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: pad
